--- a/bachelor-of-engineering.html
+++ b/bachelor-of-engineering.html
@@ -1,37 +1,24 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Bachelor of Engineering - T John Institute of Technology</title>
-	<meta charset="UTF-8">
-	<meta name="theme-color" content="#DA251C">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/bootstrap-theme.css">
-	<link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-	<header class="title img" style="background-image: url('assets/img/headers/be.jpg');">
-		<h1><span>Bachelor of Engineering</span></h1>	
-	</header>
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-6">
+---
+layout : page
+---
 
-			</div>
-			<div class="col-sm-6">
-				
-			</div>
+<header class="title img" style="background-image: url('assets/img/headers/be.jpg');">
+	<h1><span>Bachelor of Engineering</span></h1>	
+</header>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-6">
+
 		</div>
-		<div class="row">
-			<a href="computer-science-and-engineering-department.html" class="btn btn-primary">Computer Science &amp; Engineering</a>
-			<a href="information-science-and-engineering-department.html" class="btn btn-primary">Information Science &amp; Engineering</a>
-			<a href="electronics-and-communication-engineering-department.html" class="btn btn-primary">Electronics &amp; Communication Engineering</a>
-			<a href="mechanical-engineering-department.html" class="btn btn-primary">Mechanical Engineering</a>
-			<a href="civil-engineering-department.html" class="btn btn-primary">Civil Engineering</a>
+		<div class="col-sm-6">
+			
 		</div>
 	</div>
-
-	<script src="assets/js/jquery.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
-</body>
-</html>
+	<div class="row">
+		<a href="computer-science-and-engineering-department.html" class="btn btn-primary">Computer Science &amp; Engineering</a>
+		<a href="information-science-and-engineering-department.html" class="btn btn-primary">Information Science &amp; Engineering</a>
+		<a href="electronics-and-communication-engineering-department.html" class="btn btn-primary">Electronics &amp; Communication Engineering</a>
+		<a href="mechanical-engineering-department.html" class="btn btn-primary">Mechanical Engineering</a>
+		<a href="civil-engineering-department.html" class="btn btn-primary">Civil Engineering</a>
+	</div>
+</div>
