--- a/contact.html
+++ b/contact.html
@@ -1,60 +1,47 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Contact Us - T John Institute of Technology</title>
-	<meta charset="UTF-8">
-	<meta name="theme-color" content="#DA251C">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/bootstrap-theme.css">
-	<link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-	<header class="title">
-		<h1>Contact Us</h1>	
-	</header>
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-4">
-				<h3>Campus Address</h3>
-				#86/1, <br>
-				Gottigere, Bannerghatta Road Bangalore, <br>
-				Karnataka 560 083, <br>
-				India. <br>
-				Phone No: 080 40250555 <br>
-				Fax : 080 49030509 <br>
-				Website: www.tjohnit.com
-			</div>
-			<div class="col-sm-4">
-				<h3>Corporate Address</h3>
-				SG−4, <br>
-				Manipal Centre, <br>
-				Dickenson Road, Bangalore, <br>
-				Karnataka 560 042, <br>
-				India. <br>
-				Phone: +91 80 25597817, 25092057 <br>
-				Fax : +91 80 25590952
-			</div>
-			<div class="col-sm-4">
-				<label for="">Name</label>
-				<input type="text" class="form-control" placeholder="">
-				<label for="">Email</label>
-				<input type="text" class="form-control" placeholder="">
-				<label for="">Message</label>
-				<textarea name="" rows="6" class="form-control"></textarea>
-				<br>
-				<input type="submit" class="btn btn-primary">
-			</div>
+---
+layout : page
+---
+
+<header class="title">
+	<h1>Contact Us</h1>	
+</header>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-4">
+			<h3>Campus Address</h3>
+			#86/1, <br>
+			Gottigere, Bannerghatta Road Bangalore, <br>
+			Karnataka 560 083, <br>
+			India. <br>
+			Phone No: 080 40250555 <br>
+			Fax : 080 49030509 <br>
+			Website: www.tjohnit.com
 		</div>
-		
-		<div class="row">
-			<div class="col-sm-12">
-				Map goes here
-			</div>
+		<div class="col-sm-4">
+			<h3>Corporate Address</h3>
+			SG−4, <br>
+			Manipal Centre, <br>
+			Dickenson Road, Bangalore, <br>
+			Karnataka 560 042, <br>
+			India. <br>
+			Phone: +91 80 25597817, 25092057 <br>
+			Fax : +91 80 25590952
+		</div>
+		<div class="col-sm-4">
+			<label for="">Name</label>
+			<input type="text" class="form-control" placeholder="">
+			<label for="">Email</label>
+			<input type="text" class="form-control" placeholder="">
+			<label for="">Message</label>
+			<textarea name="" rows="6" class="form-control"></textarea>
+			<br>
+			<input type="submit" class="btn btn-primary">
 		</div>
 	</div>
-
-	<script src="assets/js/jquery.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
-</body>
-</html>
+	
+	<div class="row">
+		<div class="col-sm-12">
+			Map goes here
+		</div>
+	</div>
+</div>
