--- a/electronics-and-communication-engineering-department.html
+++ b/electronics-and-communication-engineering-department.html
@@ -1,75 +1,62 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Electronics &amp Communication Engineering Department - T John Institute of Technology</title>
-	<meta charset="UTF-8">
-	<meta name="theme-color" content="#DA251C">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/bootstrap-theme.css">
-	<link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-	<header class="title img" style="background-image: url('assets/img/headers/ec.jpg');">
-		<h1><span>Electronics &amp Communication Engineering Department</span></h1>	
-	</header>
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-9">
-				<h2>Electronics &amp Communication Department</h2>
-				<p>
-					The Electronics Communication department was established in the year 2006 immediately after the institute was founded. The department offers 4-year B.E program (8 semesters) in Electronics and Communication Engineering and M.Tech in VLSI Design and Embedded Systemswhich is affiliated to Visvesvaraya Technological University (VTU) and approved by All India Council for Technical Education (AICTE). The department currently has an intake of 120 students for B.E. and 18 for M.Tech.
-				</p>
+---
+layout : page
+---
 
-				<h2>Vision</h2>
-				<p>
-					To achieve excellence in delivering quality education of global standards, coupled with innovative practices using advanced technology and expertise, transforming the student community into potential global leaders with accountability to meet societal, national and dynamic global challenges.
-				</p>
-				<h2>Mission</h2>
-				<p>
-					To provide the students of UG and PG programmes quality education for enabling them to compete internationally, with creative solutions, generate and disseminate essential knowledge and technologies in the field of Electronics and Communications Engineering.
-				</p>
+<header class="title img" style="background-image: url('assets/img/headers/ec.jpg');">
+	<h1><span>Electronics &amp Communication Engineering Department</span></h1>	
+</header>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-9">
+			<h2>Electronics &amp Communication Department</h2>
+			<p>
+				The Electronics Communication department was established in the year 2006 immediately after the institute was founded. The department offers 4-year B.E program (8 semesters) in Electronics and Communication Engineering and M.Tech in VLSI Design and Embedded Systemswhich is affiliated to Visvesvaraya Technological University (VTU) and approved by All India Council for Technical Education (AICTE). The department currently has an intake of 120 students for B.E. and 18 for M.Tech.
+			</p>
 
-				<h2>Goals and Objectives</h2>
-				<ul>
-					<li>Create a good learning academic atmosphere.</li>
-					<li>Provide practical exposures to the students through modern laboratories with continuous upgradation.</li>
-					<li>Enhancing the information sources like Library and internet access facilities.</li>
-					<li>Create technical awareness among the students through special lectures from the eminent resource persons, industrial visits and in-plant training.</li>
-					<li>Improve the faculty performance through continuous education, organizing and participating in seminars, workshops, faculty development programs, national and international conferences.</li>
-					<li>Motivate both faculty members and students to undertake research assignments and develop prototypes with Industry and Institution interactions.</li>
-					<li>Encourage final year students to get their projects sponsored by KSCST (Karnataka State Council for Science and Technology).</li>
-					<li>Offer Post Graduate Degree Programmes with the specialization in DSP, VLSI, Embedded Systems and Communication Systems.</li>
-					<li>Obtain NBA accreditation in next 3 year</li>
-				</ul>
+			<h2>Vision</h2>
+			<p>
+				To achieve excellence in delivering quality education of global standards, coupled with innovative practices using advanced technology and expertise, transforming the student community into potential global leaders with accountability to meet societal, national and dynamic global challenges.
+			</p>
+			<h2>Mission</h2>
+			<p>
+				To provide the students of UG and PG programmes quality education for enabling them to compete internationally, with creative solutions, generate and disseminate essential knowledge and technologies in the field of Electronics and Communications Engineering.
+			</p>
 
-				<h2>Infrastructure</h2>
-				<ul>
+			<h2>Goals and Objectives</h2>
+			<ul>
+				<li>Create a good learning academic atmosphere.</li>
+				<li>Provide practical exposures to the students through modern laboratories with continuous upgradation.</li>
+				<li>Enhancing the information sources like Library and internet access facilities.</li>
+				<li>Create technical awareness among the students through special lectures from the eminent resource persons, industrial visits and in-plant training.</li>
+				<li>Improve the faculty performance through continuous education, organizing and participating in seminars, workshops, faculty development programs, national and international conferences.</li>
+				<li>Motivate both faculty members and students to undertake research assignments and develop prototypes with Industry and Institution interactions.</li>
+				<li>Encourage final year students to get their projects sponsored by KSCST (Karnataka State Council for Science and Technology).</li>
+				<li>Offer Post Graduate Degree Programmes with the specialization in DSP, VLSI, Embedded Systems and Communication Systems.</li>
+				<li>Obtain NBA accreditation in next 3 year</li>
+			</ul>
 
-					<li>Digital Trainer kits, Scientech CROs, Tektronix Digital storage oscilloscope</li>
-					<li>TDM, DPSK & QPSK Kits, Power Supplies of different voltage ranges, Function Generators, Pulse Generators, LCR meter, Frequency meter, IC tester, Digital Multi meters & LCD Projector, Logic Analyzer, Inkjet Printers, Power Electronics Modules.</li>
-					<li>Mentor Graphics software, Xilinx FPGA Trainer Kits with interface module, DSP kits, Micro-controller kits with interfaces, 8086 software package with interfacing kits</li>
-					<li>Computers with Internet facility</li>
-					<li>Microwave test benches, Fiber Optics Kits, Microstrip Antenna.</li>
-				</ul>
-				<h2>Result</h2>
-				<p>
-					It is constant endeavor of the department in bringing excellent results in all the semesters. Overall passing percentage for VIII semester for the year 2010-11 is 92%.
-				</p>
-			</div>
-			<div class="col-sm-3">
-				<ul class="nav nav-pills nav-stacked sidebar">
-					<li><a href="#">Events</a></li>
-					<li><a href="#">Faculties</a></li>
-					<li><a href="ece/time-table.html">Time Table</a></li>
-					<li><a href="#">Clubs</a></li>
-					<li><a href="#">Gallery</a></li>
-				</ul>
-			</div>
+			<h2>Infrastructure</h2>
+			<ul>
+
+				<li>Digital Trainer kits, Scientech CROs, Tektronix Digital storage oscilloscope</li>
+				<li>TDM, DPSK & QPSK Kits, Power Supplies of different voltage ranges, Function Generators, Pulse Generators, LCR meter, Frequency meter, IC tester, Digital Multi meters & LCD Projector, Logic Analyzer, Inkjet Printers, Power Electronics Modules.</li>
+				<li>Mentor Graphics software, Xilinx FPGA Trainer Kits with interface module, DSP kits, Micro-controller kits with interfaces, 8086 software package with interfacing kits</li>
+				<li>Computers with Internet facility</li>
+				<li>Microwave test benches, Fiber Optics Kits, Microstrip Antenna.</li>
+			</ul>
+			<h2>Result</h2>
+			<p>
+				It is constant endeavor of the department in bringing excellent results in all the semesters. Overall passing percentage for VIII semester for the year 2010-11 is 92%.
+			</p>
+		</div>
+		<div class="col-sm-3">
+			<ul class="nav nav-pills nav-stacked sidebar">
+				<li><a href="#">Events</a></li>
+				<li><a href="#">Faculties</a></li>
+				<li><a href="ece/time-table.html">Time Table</a></li>
+				<li><a href="#">Clubs</a></li>
+				<li><a href="#">Gallery</a></li>
+			</ul>
 		</div>
 	</div>
-
-	<script src="assets/js/jquery.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
-</body>
-</html>
+</div>
