--- a/mechanical-engineering-department.html
+++ b/mechanical-engineering-department.html
@@ -1,59 +1,46 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Mechanical Engineering Department- T John Institute of Technology</title>
-	<meta charset="UTF-8">
-	<meta name="theme-color" content="#DA251C">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/bootstrap-theme.css">
-	<link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-	<header class="title img" style="background-image: url('assets/img/headers/me.jpg');">
-		<h1><span>Mechanical Engineering Department</span></h1>	
-	</header>
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-9">
-				<h2>Mechanical Engineering Department</h2>
-				<p>
-					The Mechanical Engineering department was established in the year 2009. The department offers 4-year B.E program (8 semesters) in Mechanical Engineering which is affiliated to Visvesvaraya Technological University (VTU) and approved by All India Council for Technical Education (AICTE). The department currently has an intake of 120 students.
-				</p>
-				<h2>Vision</h2>
-				<p>
-					To impart futuristic technical education through dedicated staff and set a global standard by making students, technologically superior, disciplined and ethically strong who will improve the life of human being.
-				</p>
-				<h2>Mission</h2>
-				<p>	
-					To educate students from all over India, including other countries, to compete internationally, with creative and practical knowledge for meeting the needs of society, in the field of Mechanical Engineering.
-				</p>
+---
+layout : page
+---
 
-				<h2>Goals &amp Objectives</h2>
-				<ul>
-					<li>Create a student friendly disciplined good learning environment.</li>
-					<li>Provide practical exposure to the students through modern laboratories with continuous upgradation.</li>
-					<li>Enhancing the information sources like Library, internet access facilities.</li>
-					<li>Create technical awareness among the students through special lectures from eminent resource persons, industrial visits and in plant training.</li>
-					<li>Improve the faculty performance through continuous education, organizing and participating in seminars, workshops, faculty development programs, national and international conferences.</li>
-					<li>Motivate both faculty and students to undertake research works and develop products through Industry and Institution co-operation.</li>
-					<li>Encourage final year students to get there projects sponsored by KSCST (Karnataka State Council for Science and Technology).</li>
-					<li>Get NBA accreditation in next 4 years.</li>
-				</ul>
-			</div>
-			<div class="col-sm-3">
-				<ul class="nav nav-pills nav-stacked sidebar">
-					<li><a href="#">Events</a></li>
-					<li><a href="#">Faculties</a></li>
-					<li><a href="mech/time-table.html">Time Table</a></li>
-					<li><a href="#">Clubs</a></li>
-					<li><a href="#">Gallery</a></li>
-				</ul>
-			</div>		
+<header class="title img" style="background-image: url('assets/img/headers/me.jpg');">
+	<h1><span>Mechanical Engineering Department</span></h1>	
+</header>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-9">
+			<h2>Mechanical Engineering Department</h2>
+			<p>
+				The Mechanical Engineering department was established in the year 2009. The department offers 4-year B.E program (8 semesters) in Mechanical Engineering which is affiliated to Visvesvaraya Technological University (VTU) and approved by All India Council for Technical Education (AICTE). The department currently has an intake of 120 students.
+			</p>
+			<h2>Vision</h2>
+			<p>
+				To impart futuristic technical education through dedicated staff and set a global standard by making students, technologically superior, disciplined and ethically strong who will improve the life of human being.
+			</p>
+			<h2>Mission</h2>
+			<p>	
+				To educate students from all over India, including other countries, to compete internationally, with creative and practical knowledge for meeting the needs of society, in the field of Mechanical Engineering.
+			</p>
+
+			<h2>Goals &amp Objectives</h2>
+			<ul>
+				<li>Create a student friendly disciplined good learning environment.</li>
+				<li>Provide practical exposure to the students through modern laboratories with continuous upgradation.</li>
+				<li>Enhancing the information sources like Library, internet access facilities.</li>
+				<li>Create technical awareness among the students through special lectures from eminent resource persons, industrial visits and in plant training.</li>
+				<li>Improve the faculty performance through continuous education, organizing and participating in seminars, workshops, faculty development programs, national and international conferences.</li>
+				<li>Motivate both faculty and students to undertake research works and develop products through Industry and Institution co-operation.</li>
+				<li>Encourage final year students to get there projects sponsored by KSCST (Karnataka State Council for Science and Technology).</li>
+				<li>Get NBA accreditation in next 4 years.</li>
+			</ul>
 		</div>
+		<div class="col-sm-3">
+			<ul class="nav nav-pills nav-stacked sidebar">
+				<li><a href="#">Events</a></li>
+				<li><a href="#">Faculties</a></li>
+				<li><a href="mech/time-table.html">Time Table</a></li>
+				<li><a href="#">Clubs</a></li>
+				<li><a href="#">Gallery</a></li>
+			</ul>
+		</div>		
 	</div>
-
-	<script src="assets/js/jquery.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
-</body>
-</html>
+</div>
