--- a/message-from-principal.html
+++ b/message-from-principal.html
@@ -1,38 +1,25 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>T John Institute of Technology</title>
-	<meta charset="UTF-8">
-	<meta name="theme-color" content="#DA251C">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/bootstrap-theme.css">
-	<link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-	<header class="title">
-		<h1>Message from Chairman</h1>	
-	</header>
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-3">
-				<img src="assets/img/principal.jpg" alt="" class="img img-responsive">
-			</div>
-			<div class="col-sm-9">
+---
+layout : page
+---
 
-				<p><strong>Dr. H N Thippeswamy</strong> : Specialized in the field of Hydraulics and Water resources engineering. He has 22 years of teaching and 10 years of industrial experience. He has published 8 research papers in reputed National and International Journals. He has worked for B O S in Karnataka University, Christ University and for BOE in VTU.</p>
-				<p>He wants his students <strong>THE BUDDING ENGINEERS</strong> to <strong>AIM</strong> high, <strong>THINK</strong> high and <strong>WORK</strong> hard to achieve their goal. He wants his students to work for their growth which adds to the growth of the Institution and the Country. He wants his students to read autobiography of great people and gets motivated to become <strong>ACHIEVERS</strong> in life. Now, this is the time to change and change for better. He believes in positive thinking, hard working and belief in oneself. He also believes that <strong>GRATITUDE IS THE BEST ATTITUDE</strong>.</p>
-				<p>He has taken over as Principal, TJIT from Sep 11th, 2014.</p>
-				Dr. H N Thippeswamy<br>
-				E-mail : tjitprincipal@tjohngroup.com<br>
-				Phone : 080 - 28429126<br>
-				Office : 080 - 40250555<br>
-				Fax : 080 - 49030509
-			</div>
-		</div>		
-	</div>
+<header class="title">
+	<h1>Message from Chairman</h1>	
+</header>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-3">
+			<img src="assets/img/principal.jpg" alt="" class="img img-responsive">
+		</div>
+		<div class="col-sm-9">
 
-	<script src="assets/js/jquery.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
-</body>
-</html>
+			<p><strong>Dr. H N Thippeswamy</strong> : Specialized in the field of Hydraulics and Water resources engineering. He has 22 years of teaching and 10 years of industrial experience. He has published 8 research papers in reputed National and International Journals. He has worked for B O S in Karnataka University, Christ University and for BOE in VTU.</p>
+			<p>He wants his students <strong>THE BUDDING ENGINEERS</strong> to <strong>AIM</strong> high, <strong>THINK</strong> high and <strong>WORK</strong> hard to achieve their goal. He wants his students to work for their growth which adds to the growth of the Institution and the Country. He wants his students to read autobiography of great people and gets motivated to become <strong>ACHIEVERS</strong> in life. Now, this is the time to change and change for better. He believes in positive thinking, hard working and belief in oneself. He also believes that <strong>GRATITUDE IS THE BEST ATTITUDE</strong>.</p>
+			<p>He has taken over as Principal, TJIT from Sep 11th, 2014.</p>
+			Dr. H N Thippeswamy<br>
+			E-mail : tjitprincipal@tjohngroup.com<br>
+			Phone : 080 - 28429126<br>
+			Office : 080 - 40250555<br>
+			Fax : 080 - 49030509
+		</div>
+	</div>		
+</div>
