--- a/apply-online.html
+++ b/apply-online.html
@@ -1,39 +1,26 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Apply Online - T John Institute of Technology</title>
-	<meta charset="UTF-8">
-	<meta name="theme-color" content="#DA251C">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/bootstrap-theme.css">
-	<link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-	<header class="title">
-		<h1>Apply Online</h1>	
-	</header>
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-8">
-						
-			</div>
-			<div class="col-sm-4">
-				<form action="">
+---
+layout : page
+---
+
+<header class="title">
+	<h1>Apply Online</h1>	
+</header>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-8">
+
+		</div>
+		<div class="col-sm-4">
+			<form action="">
 				<label for="">Name </label>
-					<input type="text" class="form-control">
-					<label for="">Email</label>
-					<input type="text" class="form-control">
-					<label for="">Message</label>
-					<textarea name="" id="" rows="10" class="form-control"></textarea>
-					<br>
-					<input type="submit" class="btn btn-primary" value="Submit">
-				</form>
-			</div>
+				<input type="text" class="form-control">
+				<label for="">Email</label>
+				<input type="text" class="form-control">
+				<label for="">Message</label>
+				<textarea name="" id="" rows="10" class="form-control"></textarea>
+				<br>
+				<input type="submit" class="btn btn-primary" value="Submit">
+			</form>
 		</div>
 	</div>
-
-	<script src="assets/js/jquery.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
-</body>
-</html>
+</div>
