--- a/objectives.html
+++ b/objectives.html
@@ -1,34 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Objectives - T John Institute of Technology</title>
-	<meta charset="UTF-8">
-	<meta name="theme-color" content="#DA251C">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/bootstrap-theme.css">
-	<link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-	<header class="title">
-		<h1>Objectives</h1>	
-	</header>
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-6">
-				<ul>
-					<li>To impart science-based engineering education to develop professional skills that will prepare the students for immediate employment and provide them with a solid foundation for further education.</li>
-					<li>To create among students the curiosity, the desire and the ability to keep learning throughout life. Character building in students, so as to enable them to become responsible citizens and committed professionals.</li>
-					<li>To keep pace with changing times by providing quality education through value added courses, beyond the curriculum prescribed by the University.</li>
-					<li>To develop the design capability among students so that they have the ability to participate in creative, synthetic and integrative activities of the relevant branch of engineering.</li>
-					<li>To develop an understanding among students of the human, social and business context in which they will utilize their engineering skills.</li>
-					<li>To provide state-of-the art infrastructure for students to develop their skills</li>
-					<li>Have continuous association, involvement and partnership with the corporate world</li>
-				</ul>
-			</div>
+---
+layout : page
+---
+<header class="title">
+	<h1>Objectives</h1>	
+</header>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-6">
+			<ul>
+				<li>To impart science-based engineering education to develop professional skills that will prepare the students for immediate employment and provide them with a solid foundation for further education.</li>
+				<li>To create among students the curiosity, the desire and the ability to keep learning throughout life. Character building in students, so as to enable them to become responsible citizens and committed professionals.</li>
+				<li>To keep pace with changing times by providing quality education through value added courses, beyond the curriculum prescribed by the University.</li>
+				<li>To develop the design capability among students so that they have the ability to participate in creative, synthetic and integrative activities of the relevant branch of engineering.</li>
+				<li>To develop an understanding among students of the human, social and business context in which they will utilize their engineering skills.</li>
+				<li>To provide state-of-the art infrastructure for students to develop their skills</li>
+				<li>Have continuous association, involvement and partnership with the corporate world</li>
+			</ul>
 		</div>
 	</div>
-	<script src="assets/js/jquery.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
-</body>
-</html>		
+</div>
