--- a/placement-details.html
+++ b/placement-details.html
@@ -1,122 +1,110 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Placements - T John Institute of Technology</title>
-	<meta charset="UTF-8">
-	<meta name="theme-color" content="#DA251C">
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/bootstrap-theme.css">
-	<link rel="stylesheet" href="assets/css/style.css">
-</head>
-<body>
-	<header class="title">
-		<h1>Placements</h1>	
-	</header>
-	<section id="placements">
-		<div class="container">
-			<h2 class="section-head">Recent Placements</h2>
-			<div class="row">
-				<div class="col-sm-2 col-xs-6 student">
-					<div>
-						<img src="assets/img/avatars/girl.png" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
+---
+layout : page
+---
+
+<header class="title">
+	<h1>Placements</h1>	
+</header>
+<section id="placements">
+	<div class="container">
+		<h2 class="section-head">Recent Placements</h2>
+		<div class="row">
+			<div class="col-sm-2 col-xs-6 student">
+				<div>
+					<img src="assets/img/avatars/girl.png" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-2 col-xs-6 student">
-					<div>
-						<img src="assets/img/avatars/boy.png" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
+			</div>
+			<div class="col-sm-2 col-xs-6 student">
+				<div>
+					<img src="assets/img/avatars/boy.png" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-2 col-xs-6 student">
-					<div>
-						<img src="assets/img/avatars/girl.png" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
+			</div>
+			<div class="col-sm-2 col-xs-6 student">
+				<div>
+					<img src="assets/img/avatars/girl.png" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-2 col-xs-6 student">
-					<div>
-						<img src="assets/img/avatars/boy.png" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
+			</div>
+			<div class="col-sm-2 col-xs-6 student">
+				<div>
+					<img src="assets/img/avatars/boy.png" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-2 col-xs-6 student">
-					<div>
-						<img src="assets/img/avatars/girl.png" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
+			</div>
+			<div class="col-sm-2 col-xs-6 student">
+				<div>
+					<img src="assets/img/avatars/girl.png" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-2 col-xs-6 student">
-					<div>
-						<img src="assets/img/avatars/boy.png" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
+			</div>
+			<div class="col-sm-2 col-xs-6 student">
+				<div>
+					<img src="assets/img/avatars/boy.png" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-2 col-xs-6 student">
-					<div>
-						<img src="assets/img/avatars/girl.png" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
+			</div>
+			<div class="col-sm-2 col-xs-6 student">
+				<div>
+					<img src="assets/img/avatars/girl.png" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-2 col-xs-6 student">
-					<div>
-						<img src="assets/img/avatars/boy.png" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
+			</div>
+			<div class="col-sm-2 col-xs-6 student">
+				<div>
+					<img src="assets/img/avatars/boy.png" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-2 col-xs-6 student">
-					<div>
-						<img src="assets/img/avatars/girl.png" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
+			</div>
+			<div class="col-sm-2 col-xs-6 student">
+				<div>
+					<img src="assets/img/avatars/girl.png" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-2 col-xs-6 student">
-					<div>
-						<img src="assets/img/avatars/boy.png" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
+			</div>
+			<div class="col-sm-2 col-xs-6 student">
+				<div>
+					<img src="assets/img/avatars/boy.png" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-2 col-xs-6 student">
-					<div>
-						<img src="assets/img/avatars/girl.png" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
+			</div>
+			<div class="col-sm-2 col-xs-6 student">
+				<div>
+					<img src="assets/img/avatars/girl.png" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
-				<div class="col-sm-2 col-xs-6 student">
-					<div>
-						<img src="assets/img/avatars/boy.png" alt="">
-						<p class="name">FirstName</p>
-						<p class="course">BE-CS</p>
-						<p class="company">Samsung</p>
-					</div>
+			</div>
+			<div class="col-sm-2 col-xs-6 student">
+				<div>
+					<img src="assets/img/avatars/boy.png" alt="">
+					<p class="name">FirstName</p>
+					<p class="course">BE-CS</p>
+					<p class="company">Samsung</p>
 				</div>
 			</div>
 		</div>
-	</section>
-	<script src="assets/js/jquery.js"></script>
-	<script src="assets/js/bootstrap.min.js"></script>
-</body>
-</html>
+	</div>
+</section>
