--- a/computer-science-and-engineering-department.html
+++ b/computer-science-and-engineering-department.html
@@ -1,5 +1,6 @@
 ---
 layout : page
+branch : cs
 ---
 
 <header class="title img blurred" style="background-image: url('assets/img/headers/cs.jpg');">
@@ -52,13 +53,7 @@ layout : page
 			</p>
 		</div>
 		<div class="col-sm-3">
-			<ul class="nav nav-pills nav-stacked sidebar">
-				<li><a href="cs/events.html">Events</a></li>
-				<li><a href="cs/faculties.html">Faculties</a></li>
-				<li><a href="cs/time-table.html">Time Table</a></li>
-				<li><a href="cs/clubs.html">Clubs</a></li>
-				<li><a href="cs/gallery.html">Gallery</a></li>
-			</ul>
+			{% include branch_sidebar.html %}
 		</div>
 	</div>
 </div>
