--- a/mechanical-engineering-department.html
+++ b/mechanical-engineering-department.html
@@ -1,5 +1,6 @@
 ---
 layout : page
+branch : me
 ---
 
 <header class="title img" style="background-image: url('assets/img/headers/me.jpg');">
@@ -34,13 +35,7 @@ layout : page
 			</ul>
 		</div>
 		<div class="col-sm-3">
-			<ul class="nav nav-pills nav-stacked sidebar">
-				<li><a href="#">Events</a></li>
-				<li><a href="#">Faculties</a></li>
-				<li><a href="mech/time-table.html">Time Table</a></li>
-				<li><a href="#">Clubs</a></li>
-				<li><a href="#">Gallery</a></li>
-			</ul>
+			{% include branch_sidebar.html %}
 		</div>		
 	</div>
 </div>
