changes partner images

--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@ layout : page
 			<div class="col-sm-6">
 				<div class="course">
 					<h3>Bachelor Of Engineering</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet, ea, non id odio odit distinctio expedita reiciendis tempore possimus delectus tenetur ipsam optio quidem consequatur cupiditate amet aut ipsum earum.</p>
+					<p>To impart science-based engineering education to develop professional skills that will prepare the students for immediate employment and provide them with a solid foundation for further education.</p>
 					<a href="bachelor-of-engineering.html">Find More</a>
 				</div>
 			</div>
 			<div class="col-sm-6">
 				<div class="course">
 					<h3> Master of Technology</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium nisi facere recusandae voluptatibus, perferendis saepe at tenetur quis quae voluptas, iste incidunt doloribus enim? Neque laborum saepe, nemo sit velit.</p>
+					<p>To create among students the curiosity, the desire and the ability to keep learning throughout life. Character building in students, so as to enable them to become committed professionals.</p>
 					<a href="master-of-technology.html">Find More</a>
 				</div>
 			</div>
@@ -152,12 +152,12 @@ layout : page
 	<h2 class="section-head">Trusted Partners</h2>
 	<div class="container">
 		<div class="row">
-			<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
-			<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
-			<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
-			<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
-			<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
-			<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/guyswhocode.jpg" alt=""></div>
+			<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/ibm-logo.jpg" alt=""></div>
+			<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/hp-logo.jpg" alt=""></div>
+			<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/microsoft-logo.jpg" alt=""></div>
+			<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/infosys-logo.jpg" alt=""></div>
+			<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/tcs-logo.jpg" alt=""></div>
+			<div class="col-sm-2 col-xs-4 partner"><img src="assets/img/partners/guyswhocode-logo.jpg" alt=""></div>
 		</div>
 	</div>
 </section>
