adds index for all branches

--- a/cs/index.html
+++ b/cs/index.html
@@ -5,7 +5,7 @@ tags : cs,be,coding
 branch : cs
 ---
 
-<header class="title img blurred" style="background-image: url('assets/img/headers/cs.jpg');">
+<header class="title img blurred" style="background-image: url('../assets/img/headers/cs.jpg');">
 	<h1><span>Computer Science &amp Engineering Department</span></h1>	
 </header>
 <div class="container">
