--- a/cv/index.html
+++ b/cv/index.html
@@ -3,7 +3,7 @@ layout : page
 branch : cv
 ---
 
-<header class="title img" style="background-image: url('assets/img/headers/cv.jpg');">
+<header class="title img" style="background-image: url('../assets/img/headers/cv.jpg');">
 	<h1><span>Civil Engineering Department</span></h1>	
 </header>
 <div class="container">
