--- a/ec/index.html
+++ b/ec/index.html
@@ -3,7 +3,7 @@ layout : page
 branch : ec
 ---
 
-<header class="title img" style="background-image: url('assets/img/headers/ec.jpg');">
+<header class="title img" style="background-image: url('../assets/img/headers/ec.jpg');">
 	<h1><span>Electronics &amp Communication Engineering Department</span></h1>	
 </header>
 <div class="container">
