--- a/is/index.html
+++ b/is/index.html
@@ -3,7 +3,7 @@ layout : page
 branch : is
 ---
 
-<header class="title img" style="background-image: url('assets/img/headers/is.jpg');">
+<header class="title img" style="background-image: url('../assets/img/headers/is.jpg');">
 	<h1><span>Information Science &amp Engineering Department</span></h1>	
 </header>
 <div class="container">
