--- a/me/index.html
+++ b/me/index.html
@@ -3,7 +3,7 @@ layout : page
 branch : me
 ---
 
-<header class="title img" style="background-image: url('assets/img/headers/me.jpg');">
+<header class="title img" style="background-image: url('../assets/img/headers/me.jpg');">
 	<h1><span>Mechanical Engineering Department</span></h1>	
 </header>
 <div class="container">
