--- a/cs/time-table.html
+++ b/cs/time-table.html
@@ -1,158 +1,19 @@
 ---
 layout : page
+title : 
+branch : 
 ---
 
 <header class="title">
-	<h1>CSE - Time Tables</h1>
+	<h1><span>Engineering</span></h1>	
 </header>
-
-<section id="time-tables">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-12 time-table">
-				<h2>7th SEM - Section A</h2>
-				<table class="table table-hover card">
-					<tr>
-						<th>Day / Time</th><th>8.30 - 9.30</th><th>9.30 - 10.30</th><th>10.30 - 10.45</th><th>12.30 - 1.30</th><th>1.30 - 2.30</th><th>2.30 - 3.30</th>
-					</tr>
-					<tr>
-						<td><b>Monday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-					</tr>
-					<tr>
-						<td><b>Tuesday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-					</tr>
-					<tr>
-						<td><b>Wednesday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-					</tr>
-					<tr>
-						<td><b>Thursday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-					</tr>
-					<tr>
-						<td><b>Friday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-					</tr>
-					<tr>
-						<td><b>Saturday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-					</tr>
-				</table>
-
-				<table class="table table-hover card">
-					<tr>
-						<th>ACA</th>
-						<th>ECS</th>
-						<th>JAVA</th>
-						<th>OOMD</th>
-						<th>SAN</th>
-						<th>C#</th>
-						<th>WEB</th>
-					</tr>
-					<tr>
-						<td>Sowmya</td>
-						<td>Sowmya</td>
-						<td>Mahesh</td>
-						<td>Bindhu</td>
-						<td></td>
-						<td></td>
-						<td>Mamtha</td>
-					</tr>
-				</table>
-			</div>
-
-			<div class="col-sm-12 time-table">
-				<h2>7th SEM - Section B</h2>
-				<table class="table table-hover card">
-					<tr>
-						<th>Day / Time</th><th>8.30 - 9.30</th><th>9.30 - 10.30</th><th>10.30 - 10.45</th><th>12.30 - 1.30</th><th>1.30 - 2.30</th><th>2.30 - 3.30</th>
-					</tr>
-					<tr>
-						<td><b>Monday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-					</tr>
-					<tr>
-						<td><b>Tuesday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-					</tr>
-					<tr>
-						<td><b>Wednesday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-					</tr>
-					<tr>
-						<td><b>Thursday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-					</tr>
-					<tr>
-						<td><b>Friday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-					</tr>
-					<tr>
-						<td><b>Saturday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-					</tr>
-				</table>
-
-				<table class="table table-hover card">
-					<tr>
-						<th>ACA</th>
-						<th>ECS</th>
-						<th>JAVA</th>
-						<th>OOMD</th>
-						<th>SAN</th>
-						<th>C#</th>
-						<th>WEB</th>
-					</tr>
-					<tr>
-						<td>Sowmya</td>
-						<td>Sowmya</td>
-						<td>Mahesh</td>
-						<td>Bindhu</td>
-						<td></td>
-						<td></td>
-						<td>Mamtha</td>
-					</tr>
-				</table>
-			</div>
-
-				<!-- <div class="col-sm-12 time-table">
-					<h2>xx SEM - Section x</h2>
-					<table class="table table-hover card">
-						<tr>
-							<th>Day / Time</th><th>8.30 - 9.30</th><th>9.30 - 10.30</th><th>10.30 - 10.45</th><th>12.30 - 1.30</th><th>1.30 - 2.30</th><th>2.30 - 3.30</th>
-						</tr>
-						<tr>
-							<td><b>Monday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-						</tr>
-						<tr>
-							<td><b>Tuesday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-						</tr>
-						<tr>
-							<td><b>Wednesday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-						</tr>
-						<tr>
-							<td><b>Thursday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-						</tr>
-						<tr>
-							<td><b>Friday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-						</tr>
-						<tr>
-							<td><b>Saturday</b></td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td><td>XYZ</td>
-						</tr>
-					</table>
-
-					<table class="table table-hover card">
-						<tr>
-							<th>ACA</th>
-							<th>ECS</th>
-							<th>JAVA</th>
-							<th>OOMD</th>
-							<th>SAN</th>
-							<th>C#</th>
-							<th>WEB</th>
-						</tr>
-						<tr>
-							<td>Sowmya</td>
-							<td>Sowmya</td>
-							<td>Mahesh</td>
-							<td>Bindhu</td>
-							<td></td>
-							<td></td>
-							<td>Mamtha</td>
-						</tr>
-					</table>
-				</div> -->
-
-			</div>
+<div class="container">
+	<div class="row">
+		<div class="col-sm-9">
+			Main Content
 		</div>
-	</section>
+		<div class="col-sm-3">
+			{% include branch_sidebar.html %}
+		</div>
+	</div>
+</div>
