--- a/apply-online.html
+++ b/apply-online.html
@@ -10,17 +10,28 @@ layout : page
 		<div class="col-sm-8">
 
 		</div>
-		<div class="col-sm-4">
-			<form action="">
-				<label for="">Name </label>
-				<input type="text" class="form-control">
-				<label for="">Email</label>
-				<input type="text" class="form-control">
-				<label for="">Message</label>
-				<textarea name="" id="" rows="10" class="form-control"></textarea>
-				<br>
-				<input type="submit" class="btn btn-primary" value="Submit">
-			</form>
-		</div>
 	</div>
 </div>
+
+
+<!-- Quick Contact -->
+<section id="quick-contact">
+	<div class="container">
+		<form action="" method="POST">
+			<div class="row">
+				<div class="col-sm-6">
+					<input type="text" name="" class="form-control" placeholder="Name">
+				</div>
+				<div class="col-sm-6">
+					<input type="text" name="" class="form-control" placeholder="Email">
+				</div>
+				<div class="col-sm-12">
+					<textarea name="" rows="5" class="form-control" placeholder="Message"></textarea>
+				</div>
+				<div class="col-sm-3">
+					<input type="submit" value="Send" class="btn">
+				</div>
+			</div>
+		</form>
+	</div>
+</section>
