--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,6 @@ layout : page
 	<h1>Contact Us</h1>	
 </header>
 <div class="container">
-	
 	<div class="row">
 		<div class="col-sm-12">
 			<iframe style="width: 100%" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15559.506362203143!2d77.5950328!3d12.8512465!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae6ae88b02db97%3A0x274a5c15aff04e3!2sT+John+Institute+of+Technology!5e0!3m2!1sen!2sin!4v1478325008161" height="300px" frameborder="0" style="border:0" allowfullscreen></iframe>
@@ -34,15 +33,28 @@ layout : page
 			Phone: +91 80 25597817, 25092057 <br>
 			Fax : +91 80 25590952
 		</div>
-		<div class="col-sm-4">
-			<label for="">Name</label>
-			<input type="text" class="form-control" placeholder="">
-			<label for="">Email</label>
-			<input type="text" class="form-control" placeholder="">
-			<label for="">Message</label>
-			<textarea name="" rows="6" class="form-control"></textarea>
-			<br>
-			<input type="submit" class="btn btn-primary">
-		</div>
 	</div>
 </div>
+
+
+<!-- Quick Contact -->
+<section id="quick-contact">
+	<div class="container">
+		<form action="" method="POST">
+			<div class="row">
+				<div class="col-sm-6">
+					<input type="text" name="" class="form-control" placeholder="Name">
+				</div>
+				<div class="col-sm-6">
+					<input type="text" name="" class="form-control" placeholder="Email">
+				</div>
+				<div class="col-sm-12">
+					<textarea name="" rows="5" class="form-control" placeholder="Message"></textarea>
+				</div>
+				<div class="col-sm-3">
+					<input type="submit" value="Send" class="btn">
+				</div>
+			</div>
+		</form>
+	</div>
+</section>
